<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GreenHub</string>
    <string name="action_settings">Settings</string>
    <string name="email_hint">Type your E-mail</string>
    <string name="password_hint">Type your password</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="greenhub">GreenHub:</string>
    <string name="login">Login</string>
    <string name="success_login">Successful authentication</string>
    <string name="creation_account">Account Successfully Created</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="create">Create</string>
    <string name="new_account">Create new account</string>
    <string name="account_creation_fragment">Account creation</string>
    <string name="title_activity_manager">GreenHub</string>
    <string name="title_section1">Plant Manager</string>
    <string name="title_section2">Task Calendar</string>
    <string name="title_section3">Section 3</string>
    <string name="plant_description">Plant description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_plant_information">PlantInformationActivity</string>
    <string name="potatoes">Potatoes</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="onions">Onions</string>
    <string name="garlic">Garlic</string>
    <string name="log_out">Log out</string>
    <string name="action_search">Search</string>
    <string name="pref_temp">Temperature</string>
    <string name="pref_time">Time</string>
    <string name="pref_choose_one">Choose one</string>
    <string name="pref_temp_summary">Change the scale of temperature</string>
    <string name="pref_time_summary">Change the time format</string>
    <string name="action_about">About</string>
    <string name="addPlantButton">Add plant</string>
    
    <string name="about">GreenHub has been possible thanks to:</string>
    <string name="alex">Alejandro Lora</string>
    <string name="alexandre">Alexandre Deneuve</string>
    <string name="asier">Asier Goikoetxea</string>
    <string name="gerard">Gerard Sala</string>
    <string name="kevin">Kevin Hantzen</string>
    <string name="manu">Manuel Lagunas</string>
    <string name="toscan">Toscan Vertanessian</string>
  	

    <string-array name="long_click_add">
        <item>Add</item>
        <item>View info</item>
    </string-array>
    <string-array name="long_click_delete">
        <item>Delete</item>
        <item>View info</item>
    </string-array>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_preference">PreferenceActivity</string>

    <string-array name="pref_temp_entries">
        <item>Celsius</item>
        <item>Farenheit</item>
    </string-array>
    <string-array name="pref_temp_entry_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="pref_time_entries">
        <item>24h</item>
        <item>12h</item>
    </string-array>
    <string-array name="pref_time_entry_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="title_activity_task_information">TaskInformationActivity</string>
    <string name="add_plant">Add plant</string>
    <string name="title_activity_about">About</string>

</resources>