<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context="com.example.aad2project.ui.AccountCreationFragment" >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/accountCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:text="@string/account_creation_fragment" />

    <EditText
        android:id="@+id/emailCreationAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordCreationAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPasswordAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/create" />

</LinearLayout>